<resources>
    <string name="app_name">MusicBuster</string>
    <string name="title_activity_music_buster">MusicBusterActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="loading">Loading…</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="to_play">Play</string>
    <string name="to_download">Download</string>
    <string name="track_options">Choose...</string>

    <string name="title_dialog">Note</string>
    <string name="description_dialog">This Track has already been downloaded!</string>
    <string name="delete_track_content">Are you sure you want to delete this Track?</string>
    <string name="track_downloaded">Track has been downloaded!</string>
    <string name="track_deleted">Track has been deleted!</string>
    <string name="start_download">Starting Download...</string>

    <string name="transition_name_title" translatable="false">title</string>
    <string name="transition_name_cover" translatable="false">cover</string>
    <string name="transition_name_time" translatable="false">time</string>
    <string name="transition_name_duration" translatable="false">duration</string>
    <string name="transition_name_progress" translatable="false">progress</string>
    <string name="transition_name_fab" translatable="false">fab</string>
    <string name="play_vector_path" translatable="false">M6,5 l12,7 l0,0 l-12,0z M6,12 l12,0 l0,0 l-12,7z</string>
    <string name="pause_vector_path" translatable="false">M5,6 l14,0 l0,4 l-14,0z M5,14 l14,0 l0,4 l-14,0z</string>

</resources>
